--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Katherine-Be/Project_Two_First_Name#readme",
   "dependencies": {
+    "puppeteer": "^22.8.0",
     "request-promise": "^4.2.6"
   }
 }
