--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mysql2": "^3.9.7",
     "puppeteer": "^22.8.0",
     "request-promise": "^4.2.6",
-    "sequelize": "^6.37.3",
-    "uuid": "^9.0.1"
+    "sequelize": "^6.37.3"
   }
 }
