add node version

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "request-promise": "^4.2.6",
     "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
+  },
+  "engines":{
+    "node": "<22.0.0"
   }
 }
